# twitch_chat_watcher

./: Cargo.toml  README.md  build.rs  icon.rc
assets/: new-notification-sound-effect-138807.txt
src/: audio_player.rs  chat_client.rs  filter.rs  lib.rs  main.rs  ui_app.rs
